--- a/en-EN/about.html
+++ b/en-EN/about.html
@@ -121,7 +121,7 @@
                 <div class="section-title text-center">
                     <h2 class="p-black">MODS</h2>
                     <h4>What mods are in the modpack?</h4></br>
-                    <h4>Attention! Most of the recipes in the assembly have been changed</h4>
+                    <h4>Attention! Most of the recipes in the modpack have been changed</h4>
                 </div>
             </div>
         </div>
