--- a/en-EN/wiki/CommunicationTower.html
+++ b/en-EN/wiki/CommunicationTower.html
@@ -106,8 +106,7 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        To work with the tower, you need to prepare:
-                        <br>    - Installation <a href="SpaceSatellite">Space Satellite</a>
+                        Need a <a href="SpaceSatellite">Space Satellite</a>
                         <hr>
                         <p style="font-weight: bold; margin-bottom: -5px">Principle of operation:</p>
                         <p style="padding-top: 10px">
