--- a/en-EN/wiki/SpaceSatellite.html
+++ b/en-EN/wiki/SpaceSatellite.html
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title text-center">
-                    <h1 class="p-black">SpaceSatellite</h1>
+                    <h1 class="p-black">Space Satellite</h1>
                     <hr>
                     <div class="tab-wiki menu" style="float: left;">
                         <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Description</button>
@@ -104,8 +104,7 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        To work with satellite, you need to prepare:
-                        <br>    - Install <a href="CommunicationTower">Communication Tower</a>
+                        Need a <a href="CommunicationTower">Communication Tower</a>
                         <hr>
                         <p style="font-weight: bold; margin-bottom: -5px">Principle of operation:</p>
                         <p style="padding-top: 10px">
@@ -142,8 +141,8 @@
                         <li>Communication Transmitter: 1x</li>
                         The rest of the service hatches are not required.
                         <hr>
-                        <p style="font-weight: bold; margin-bottom: 5px">Важно!</p>
-                        The satellite is builded only in orbit or (if orbit is disabled in the GalactiCraft config) on the moon.
+                        <p style="font-weight: bold; margin-bottom: 5px">Important!</p>
+                        The satellite is built only in orbit or (if orbit is disabled in the GalactiCraft config) on the moon.
                         <p style="padding-top: 5px">
                             To enable the hologram (hint when building), use the Multiblock Machine Blueprint
                             from the TecTech mod, click it on the multiblock controller.
