--- a/en-EN/wiki/advpyrolyse.html
+++ b/en-EN/wiki/advpyrolyse.html
@@ -92,7 +92,7 @@
                         The principle of operation of a pyrolysis oven is based on the thermal decomposition of organic
                         substances into pyrolysis gases and solid residues.
                         <br><br>
-                        The advanced Pyrolysis Oven differs from the conventional <a href="pyrolyse">Pyrolysis Oven</a> тем,
+                        The advanced Pyrolysis Oven differs from the conventional <a href="pyrolyse">Pyrolysis Oven</a>
                         in that it is <a class="text-center" data-tooltip="Performing multiple recipes at once at the same time"
                                      style="color: #007bff;">parallel</a>.
 
@@ -163,8 +163,8 @@
                         <li>Energy Hatch: 1x</li>
                         <li>Maintenance Hatch: 1x</li>
                         <li>Muffler Hatch: 1x</li>
-                        <li>Output Bus: до 1x</li>
-                        <li>Output Hatch: до 1x</li>
+                        <li>Output Bus: 1x</li>
+                        <li>Output Hatch: 1x</li>
                         <li>Input Bus: 1x</li>
                         The rest of the service hatches are not required.
                         <hr>
