--- a/en-EN/wiki/primwaterpump.html
+++ b/en-EN/wiki/primwaterpump.html
@@ -110,7 +110,7 @@
                         <hr>
 
                         <p style="font-weight: bold; margin-bottom: -5px">Water generation coefficient:</p><br>
-                        Water generation coefficient - h.
+                        Water generation coefficient = h.
                         The ratio is changed using Output Hatch:
                         <li>Pump Output Hatch: h = 1</li>
                         <li>ULV Output Hatch: h = 2</li>
@@ -118,10 +118,10 @@
 
                         <br>
                         <p style="font-weight: bold; margin-bottom: -5px">Biome Coefficient:</p><br>
-                        Biome coefficient - b.
-                        The coefficient is changed using the biome in which the controller is located:
+                        Biome coefficient = b.
+                        The coefficient is changed depending on the biome the controller is located in:
                         <li>Ocean, River: b = 1000 L/s</li>
-                        <li>Swamplant: b = 800 L/s</li>
+                        <li>Swampland: b = 800 L/s</li>
                         <li>Jungle: b = 350 L/s</li>
                         <li>Snow, Iceland: b = 300 L/s</li>
                         <li>Plains, Forest: b = 250 L/s</li>
@@ -131,7 +131,7 @@
 
                         <br>
                         <p style="font-weight: bold; margin-bottom: -5px">Water generation:</p><br>
-                        Water is generated at two coefficients according to the following formula:<br>
+                        Water is generated according to the following formula:<br>
                         Water generation (L/s) = h * b
 
                     </div>
@@ -172,7 +172,7 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        To build this multiblock you will need blocks: Primitive Pump Deck и Wood Frame Box.<br>
+                        To build this multiblock you will need blocks: Primitive Pump Deck and Wood Frame Box.<br>
                         <hr>
                         Output Hatch (installed in a red square on the hologram):
                         The rest of the service hatches are not required.<br>
