--- a/en-EN/wiki/pyrolyse.html
+++ b/en-EN/wiki/pyrolyse.html
@@ -140,14 +140,14 @@
                     <div id="bg-right"></div>
                     <div id="content-left">
                         To build this multiblock you will need blocks: Solid Steel Machine Casing, Steel
-                        Pipe Casing и Steel Frame Box.</br>
+                        Pipe Casing and Steel Frame Box.</br>
                         <hr>
                         Service hatches (installed anywhere instead of Solid Steel Machine Casing):
                         <li>LV Energy Hatch: 1x</li>
                         <li>Maintenance Hatch: 1x</li>
                         <li>Muffler Hatch: 1x</li>
-                        <li>Output Bus: до 1x</li>
-                        <li>Output Hatch: до 1x</li>
+                        <li>Output Bus: 1x</li>
+                        <li>Output Hatch: 1x</li>
                         <li>Input Bus: 1x</li>
                         The rest of the service hatches are not required.
                         <hr>
@@ -162,7 +162,7 @@
                             of how to output all fluids (5 types) from one hatch. It is recommended to use multi-pipes
                             (Nonuple Fluid Pipe).
                         </p>
-                        <p>The pyrolysis oven does not accelerate, it makes no sense to change the Energy Hatch.</p>
+                        <p>The different tiers of Energy Hatches does not boost the pyrolysis oven.</p>
                     </div>
                     <div id="content-right">
 
