--- a/en-EN/wiki/sawmill.html
+++ b/en-EN/wiki/sawmill.html
@@ -152,7 +152,7 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        To build this multiblock you will need blocks: Saw Mill Conveyor и Wooden Casing.</br>
+                        To build this multiblock you will need blocks: Saw Mill Conveyor and Wooden Casing.<br>
                         <hr>
                         <li>Energy hatch: 1x</li>
                         <li>Output Bus: 1x</li>
