--- a/en-EN/wiki/waterdrill.html
+++ b/en-EN/wiki/waterdrill.html
@@ -88,7 +88,7 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Designed for pumping water from the bedrock using electricity.
+                        Designed for pumping water from bedrock using electricity.
                     </div>
                     <div id="content-right">
 
@@ -106,20 +106,20 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        The machine pumps out water from the bedrock using electricity, depending on the biome in which
+                        The machine pumps out water from bedrock using electricity, depending on the biome in which
                         the controller is located, and Energy Hatch and Output Hatch range.
                         <hr>
 
                         <p style="font-weight: bold; margin-bottom: -5px">Water generation coefficient:</p><br>
-                        Water generation coefficient - h.
-                        The coefficient is changed using the Energy Hatch and Output Hatch range.<br>
+                        Water generation coefficient = h.
+                        The coefficient is changed using the Energy Hatch and Output Hatch tier.<br>
 
                         <br>
                         <p style="font-weight: bold; margin-bottom: -5px">Biome Coefficient:</p><br>
-                        Biome coefficient - b.
-                        The coefficient is changed using the biome in which the controller is located:
+                        Biome coefficient = b.
+                        The coefficient is changed depending on the biome the controller is located in:
                         <li>Ocean, River: b = 1000 L/s</li>
-                        <li>Swamplant: b = 800 L/s</li>
+                        <li>Swampland: b = 800 L/s</li>
                         <li>Jungle: b = 350 L/s</li>
                         <li>Snow, Iceland: b = 300 L/s</li>
                         <li>Plains, Forest: b = 250 L/s</li>
@@ -129,7 +129,7 @@
 
                         <br>
                         <p style="font-weight: bold; margin-bottom: -5px">Water generation:</p><br>
-                        Water is generated at two coefficients according to the following formula:<br>
+                        Water is generated according to the following formula:<br>
                         Water generation (L/s) = (1 * 2 ^ h) * 2 * b
                     </div>
                     <div id="content-right">
@@ -175,7 +175,7 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        To build this multiblock you will need blocks: Solid Steel Machine Casing и
+                        To build this multiblock you will need the following blocks: Solid Steel Machine Casing and
                         Steel Frame Box.<br>
                         <hr>
                         <li>Energy Hatch: 1x</li>
