--- a/ru-RU/wiki/LargeSteamTurbine.html
+++ b/ru-RU/wiki/LargeSteamTurbine.html
@@ -92,9 +92,9 @@
                     <div id="bg-right"></div>
                     <div id="content-left">
                         Большая паровая турбина - это многоблочная машина-генератор, добавленная модификацией
-                        GregTech.</br>
+                        GregTech.<br>
                         <hr>
-                        Турбина способна выработывать энергию, тратя при этом пар. Медленно разгоняется, используется
+                        Турбина способна вырабатывать энергию, тратя при этом пар. Медленно разгоняется, используется
                         для продолжительной выработки энергии.
 
                         <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
