--- a/ru-RU/wiki/waterdrill.html
+++ b/ru-RU/wiki/waterdrill.html
@@ -126,7 +126,7 @@
                         Биомный коэффициент - b.
                         Коэффициент изменяется с помощью биома, в котором находится контролер:
                         <li>Ocean, River: b = 1000 L/s</li>
-                        <li>Swamplant: b = 800 L/s</li>
+                        <li>Swampland: b = 800 L/s</li>
                         <li>Jungle: b = 350 L/s</li>
                         <li>Snow, Iceland: b = 300 L/s</li>
                         <li>Plains, Forest: b = 250 L/s</li>
