--- a/en-EN/wiki/LargeSteamTurbine.html
+++ b/en-EN/wiki/LargeSteamTurbine.html
@@ -91,7 +91,7 @@
                         he turbine is capable of generating energy, using steam.
                         Accelerates slowly, used for continuous energy production.
                         <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">Important!</p>
-                        The mechanics of work have been changed compared to the official
+                        The functions have been changed compared to the official
                         version of GregTech, please read the information provided carefully.
                     </div>
                     <div id="content-right">
@@ -171,7 +171,7 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        To build this multiblock you will need blocks: Turbine Casing.<br>
+                        To build this multiblock you will need blocks the following: Turbine Casing.<br>
                         <hr>
                         <li>Dynamo Hatch (Back center): 1x</li>
                         <li>Maintenance Hatch (Side center): 1x</li>
