--- a/en-EN/wiki/ParallelSuperComputer.html
+++ b/en-EN/wiki/ParallelSuperComputer.html
@@ -80,11 +80,11 @@
                         The supercomputer allows parallels to be distributed to Impact machines.
                         <p style="padding-top: 10px"></p>
                         The computer stores Parallel Point (PP), with the possibility of increasing or
-                        spending. Points are needed to distribute parallels to machines, each machine is limited by
+                        spending them. Points are needed to distribute parallels to machines, each machine is limited by
                         the number of parallels: 4, 16, 64, 256.
                         <p style="padding-top: 10px"></p>
-                        What is parallel? Parallel is the ability to simultaneously perform the same
-                        type of actions in several threads.
+                        What is parallelism? Parallelism is the ability to simultaneously perform the same
+                        type of action in several threads.
                         <p style="padding-top: 10px"></p>
                         If we consider parallels in the game, then this is the execution of one type of recipe several
                         times at one time (while the energy consumption is proportional to the number of recipes being executed).
@@ -158,7 +158,7 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        To build this multiblock you will need blocks: Computer Casing и
+                        To build this multiblock you will need blocks: Computer Casing and
                         Empty Rack Casing.
                         <hr>
                         <li>Energy Hatch: 1x</li>
