--- a/ru-RU/wiki/SpaceSatellite.html
+++ b/ru-RU/wiki/SpaceSatellite.html
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title text-center">
-                    <h1 class="p-black">SpaceSatellite</h1>
+                    <h1 class="p-black">Space Satellite</h1>
                     <h4 class="p-black">Космический Спутник</h4>
                     <hr>
                     <div class="tab-wiki menu" style="float: left;">
