--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link href="css/main.css" rel="stylesheet">
     <style>
    body {
-    background: url(img/banner-img.png) no-repeat;
+    background: url(img/bg1002.png) no-repeat;
     -moz-background-size: 100%; /* Firefox 3.6+ */
     -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
     -o-background-size: 100%; /* Opera 9.6+ */
