--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html class="no-js" lang="zxx">
 
 <head>
+    <script type="text/javascript">
+	    window.location.href = 'https://gtimpact.space/';
+	</script>
     <!-- Mobile Specific Meta -->
     <meta
             content="user-scalable=no"
